# spo-lab-3

./: CMakeLists.txt  main.c  main.h
client/: client.c  client.h  ui.c  ui.h  utils.c  utils.h
common/: books.c  books.h  network.c  network.h
server/: server.c  server.h  utils.c  utils.h
